--- a/.gitattributes
+++ b/.gitattributes
@@ -5,4 +5,4 @@
 *.ico binary
 *.icns binary
 release filter=lfs diff=lfs merge=lfs -text
-assets filter=lfs diff=lfs merge=lfs -text
+art filter=lfs diff=lfs merge=lfs -text
